# sem4_lb5

./: CMakeLists.txt
.github/workflows/: release.yaml
gui/: CMakeLists.txt  addeditdialog.cpp  addeditdialog.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
include/: MusicLibraryAPI.hpp
src/: Meloman.cpp
src/datasource/: DiskStorage.cpp  DiskStorage.hpp
src/domain/: AudioContent.cpp  AudioContent.hpp  InstrumentalTrack.cpp  InstrumentalTrack.hpp  MusicDisk.cpp  MusicDisk.hpp  MusicalComposition.cpp  MusicalComposition.hpp  Song.cpp  Song.hpp
src/factories/: CompositionFactory.cpp  CompositionFactory.hpp  LoggerFactory.cpp  LoggerFactory.hpp
src/logging/: ConsoleLogger.hpp  FileLogger.cpp  FileLogger.hpp  ILogger.hpp
src/presentation/: ConsolePresenter.cpp  ConsolePresenter.hpp  FilePresenter.cpp  FilePresenter.hpp  IPresenter.hpp
